--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,39 @@ services:
       consul kv put config/mysql/connection/idleConnections 10
       consul kv put config/mysql/connection/maxOpenConnections 10
 
-      
+
+
+  vault:
+    image: hashicorp/vault:latest
+    container_name: vault
+    ports:
+      - "8200:8200"
+    environment:
+      # Vault dev mode: DO NOT use these settings in production!
+      VAULT_DEV_ROOT_TOKEN_ID: "root"
+      VAULT_DEV_LISTEN_ADDRESS: "0.0.0.0:8200"
+    command: "server -dev -dev-root-token-id=root"
+    # Optional: persist logs to view the token details if needed.
+    volumes:
+      - vault-data:/vault/file
+
+  vault-init:
+      image: hashicorp/vault:latest
+      depends_on:
+        - vault
+      entrypoint: /bin/sh
+      command:
+        - -c
+        - |
+          echo "start of putting of jwt tokens in vault, starts in 5 seconds"
+          sleep 5
+          vault login root
+          vault kv put secret/jwt jwtSecret="jwt_secret_value" jwtRefreshSecret="jwt_refresh_token_value"
+          echo "Vault initialized with jwt secrets."
+      environment:
+        VAULT_ADDR: "http://vault:8200"
+        VAULT_TOKEN: "root"
+
 volumes:
   mysql-data:
+  vault-data:
