--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,29 @@
 version: '3.8'
 services:
   app:
-    build: 
+    build:
       context: .
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
     depends_on:
-      - mysql
-      - consul
-      - redis
+      mysql:
+        condition: service_healthy
+      consul:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      vault:
+        condition: service_started
+      vault-init:
+        condition: service_completed_successfully
     environment:
-      #DEVELOPMENT PURPOSE ONLY
-      #DO NOT STORE PRODUCTION VAULT DATA IN DOCKER COMPOSE
-      #DO NOT DO THIS IN PRODUCTION
+      # DEVELOPMENT PURPOSE ONLY - DO NOT DO THIS IN PRODUCTION
       VAULT_ADDR: "http://vault:8200"
       VAULT_TOKEN: "root"
+      VAULT_JWT_PATH: "/v1/secret/data/jwt"
     volumes:
       - .:/app
-
   mysql:
     image: mysql:8.0
     restart: always
@@ -31,20 +36,35 @@ services:
       - "3306:3306"
     volumes:
       - mysql-data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   redis:
     image: redis:latest
     restart: always
     ports:
       - "6379:6379"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   consul:
     image: hashicorp/consul:latest
     restart: always
     ports:
-      - "8500:8500"     
-      - "8600:8600/udp"  
+      - "8500:8500"
+      - "8600:8600/udp"
     command: "agent -server -bootstrap -ui -client=0.0.0.0"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8500/v1/status/leader"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   consul-config:
     image: hashicorp/consul:latest
@@ -61,43 +81,52 @@ services:
       consul kv put config/mysql/database authentication_db && \
       consul kv put config/redis/host redis && \
       consul kv put config/redis/port 6379 && \
-      consul kv put config/redis/password ''"
-      consul kv put config/mysql/connection/maxLifeTime 180
-      consul kv put config/mysql/connection/idleConnections 10
-      consul kv put config/mysql/connection/maxOpenConnections 10
-
-
+      consul kv put config/redis/password '' && \
+      consul kv put config/mysql/connection/maxLifeTime 180 && \
+      consul kv put config/mysql/connection/idleConnections 10 && \
+      consul kv put config/mysql/connection/maxOpenConnections 10"
 
   vault:
     image: hashicorp/vault:latest
     container_name: vault
+    cap_add:
+      - IPC_LOCK
     ports:
       - "8200:8200"
     environment:
-      # Vault dev mode: DO NOT use these settings in production!
       VAULT_DEV_ROOT_TOKEN_ID: "root"
       VAULT_DEV_LISTEN_ADDRESS: "0.0.0.0:8200"
     command: "server -dev -dev-root-token-id=root"
-    # Optional: persist logs to view the token details if needed.
     volumes:
       - vault-data:/vault/file
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "-s", "-o", "/dev/null", "-w", "%{http_code}", "http://localhost:8200/v1/sys/health", "-m", "15" ]
+      interval: 15s
+      timeout: 15s
+      retries: 30
 
   vault-init:
-      image: hashicorp/vault:latest
-      depends_on:
-        - vault
-      entrypoint: /bin/sh
-      command:
-        - -c
-        - |
-          echo "start of putting of jwt tokens in vault, starts in 5 seconds"
-          sleep 5
-          vault login root
-          vault kv put secret/jwt jwtSecret="jwt_secret_value" jwtRefreshSecret="jwt_refresh_token_value"
-          echo "Vault initialized with jwt secrets."
-      environment:
-        VAULT_ADDR: "http://vault:8200"
-        VAULT_TOKEN: "root"
+    image: hashicorp/vault:latest
+    depends_on:
+      - vault
+    entrypoint: /bin/sh
+    command:
+      - -c
+      - |
+        echo "Initializing Vault with jwt tokens..."
+        sleep 2
+        vault login root
+        vault kv put secret/jwt jwtSecret="jwt_secret_value" jwtRefreshSecret="jwt_refresh_token_value"
+        echo "Vault initialized with jwt secrets."
+    environment:
+      VAULT_ADDR: "http://vault:8200"
+      VAULT_TOKEN: "root"
+    restart: "no"
+    healthcheck:
+      test: ["CMD-SHELL", "exit 0"]
+      interval: 5s
+      timeout: 2s
+      retries: 1
 
 volumes:
   mysql-data:
