--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     volumes:
       - .:/app
   mysql:
-    image: mysql:8.0
+    image: mysql:8.0.36
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: example
@@ -46,10 +46,12 @@ services:
 
 
   redis:
-    image: redis:latest
+    image: redis:7.0.12
     restart: always
     ports:
       - "6379:6379"
+    volumes:
+      - redis_data:/data
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
@@ -57,7 +59,7 @@ services:
       retries: 5
 
   consul:
-    image: hashicorp/consul:latest
+    image: hashicorp/consul:1.16.1
     restart: always
     ports:
       - "8500:8500"
@@ -77,19 +79,33 @@ services:
       - CONSUL_HTTP_ADDR=http://consul:8500
     entrypoint: /bin/sh
     command: -c "sleep 5 && \
-      consul kv put config/mysql/host mysql && \
-      consul kv put config/mysql/user user && \
-      consul kv put config/mysql/port 3306 && \
-      consul kv put config/mysql/password password && \
-      consul kv put config/mysql/db authentication_db && \
-      
+      #MySQL Connection
+      consul kv put config/mysql/connection/host mysql && \
+      consul kv put config/mysql/connection/user user && \
+      consul kv put config/mysql/connection/port 3306 && \
+      consul kv put config/mysql/connection/password password && \
+      consul kv put config/mysql/connection/db authentication_db && \
       consul kv put config/mysql/connection/maxLifeTime 180 && \
       consul kv put config/mysql/connection/idleConnections 10 && \
-      consul kv put config/mysql/connection/maxOpenConnections 10"
-      
-      consul kv put config/redis/host redis && \
-      consul kv put config/redis/port 6379 && \
-      consul kv put config/redis/password '' && \
+      consul kv put config/mysql/connection/maxOpenConnections 10" && \
+      #redis
+      consul kv put config/redis/connection/host redis && \
+      consul kv put config/redis/connection/port 6379 && \
+      consul kv put config/redis/connection/password '' && \
+      #SMTP server
+      consul kv put config/smtp/connection/host mailhog && \
+      consul kv put config/smtp/connection/port 1025 && \
+      consul kv put config/smtp/connection/username '' && \
+      consul kv put config/smtp/connection/password ''
+
+
+
+    smtpHost := "smtp.example.com"
+    smtpPort := "587"
+    username := "your_username@example.com"
+    password := "your_password"
+
+
 
 
   vault:
@@ -134,6 +150,18 @@ services:
       timeout: 2s
       retries: 1
 
+  mailhog:
+    image: mailhog/mailhog
+    ports:
+      - "1025:1025"  # SMTP port
+      - "8025:8025"  # Web UI port
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8025" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
 volumes:
   mysql-data:
   vault-data:
+  redis_data:
