--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -102,7 +102,8 @@ services:
       \
       #General configuration
       consul kv put config/general/domain 'localhost' && \
-      consul kv put config/general/httpListenerPort 8080
+      consul kv put config/general/httpListenerPort 8080 && \
+      consul kv put config/general/register/mailVerificationTimeInSeconds 6000
 
 
   vault:
