--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -107,6 +107,7 @@ services:
         # General configuration && \
         consul kv put config/general/domain 'localhost' && \
         consul kv put config/general/httpListenerPort 8080 && \
+        consul kv put config/general/register/maxVerificationMailInCountInDay 5 && \
         consul kv put config/general/register/mailVerificationTimeInSeconds 6000 && \
         consul kv put config/general/register/hostVerificationMailAddress 'armin@testlocalhost.com' && \
         consul kv put config/general/register/verificationMailText "<html><body><h2>Welcome to Our Service!</h2><p>Please click the link below to verify your email address:</p><p><a href=\"%s\">Verify Your Email</a></p><p>If you didn\'t request this, you can ignore this email.</p></body></html>" && /
